# contract-testing-framework

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: contract-tests.yml
src/contract_framework/: __init__.py
src/contract_framework/consumer/: __init__.py  client.py
src/contract_framework/provider/: __init__.py  app.py  repository.py
src/python_contract_testing_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/consumer/: conftest.py  test_user_consumer_contract.py
tests/provider/: conftest.py  test_provider_api.py  test_user_provider_contract.py
