[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-contract-testing-framework"
version = "1.0.0"
description = "Consumer-driven API contract testing framework using Pact, pytest, and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "pact-python>=3.4,<4.0",
  "pydantic>=2.10,<3.0",
  "requests>=2.32,<3.0",
  "uvicorn>=0.49,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1,<10.0",
  "pytest-cov>=7.1,<8.0",
  "pytest-html>=4.2,<5.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "consumer_contract: generates consumer Pact contracts",
  "provider_contract: verifies the provider against Pact contracts",
  "provider_api: validates provider API behavior directly",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
